--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "mercadopago": "^1.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-paypal-button-v2": "^2.6.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
+    "request": "^2.79.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
