--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mercadopago": "^1.5.1",
-    "mongoose": "^5.10.15"
+    "mongoose": "^5.10.15",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "eslint": "^7.13.0",
